# school-attendance

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README-maqueta.md  README.MD.txt  README.md  alembic.ini  compose.yml  docker-compose.local.yml  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  playwright.config.js  playwright.integration.config.js  pyproject.toml  ronald.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml
Diseños html aprobados/Acceso Portal/: acceso-portal-desktop.html  acceso-portal-movil.html  pantalla-login-desktop.html  pantalla-login-movil.html
Diseños html aprobados/App Apoderados/: ajustes-desktop.html  ajustes-movil.html  ausencias-desktop.html  ausencias-movil.html  historial-desktop.html  historial-movil.html  home-desktop.html  home-movil.html
Diseños html aprobados/App Kiosk/: kiosco-confirmacion-registro-celular.html  kiosco-confirmacion-registro.html  kiosco-home-scanner-acceso-celular.html  kiosco-home-scanner-acceso.html
Diseños html aprobados/Plantilla Email/: plantilla_email.html
app/: main.py
app/core/: __init__.py  audit.py  auth.py  config.py  csrf.py  deps.py  encryption.py  logging.py  rate_limiter.py  security.py  security_headers.py  tenant_middleware.py  token_blacklist.py
app/db/: base.py  session.py  types.py
app/schemas/: absences.py  alerts.py  attendance.py  auth.py  common.py  courses.py  devices.py  guardians.py  notifications.py  push_subscription.py  schedules.py  students.py  tags.py  teachers.py  webapp.py  webauthn.py
app/services/: absence_service.py  alert_service.py  attendance_notification_service.py  attendance_service.py  auth_service.py  broadcast_service.py  consent_service.py  course_service.py  dashboard_service.py  device_service.py  feature_flag_service.py  guardian_service.py  notification_service.py  photo_service.py  schedule_service.py  student_service.py  tag_provision_service.py  teacher_service.py  tenant_provisioning_service.py  user_invitation_service.py  web_app_service.py  webauthn_service.py  withdrawal_request_service.py  withdrawal_service.py
app/web/: router.py
app/workers/: rq_worker.py  scheduler.py
data/kiosk-app/: config.json  device.json  students.json
data/shared/: absences.json  attendance_events.json  devices.json  guardians.json  rosters.json  schedule_exceptions.json  schedules.json  tags.json
data/teacher-pwa/: config.json  courses.json  students.json  teachers.json
data/web-app/: courses.json  students.json
docs/: BACKLOG.md  PLAN_WEBAUTHN_BIOMETRIA.md  PROPUESTA_COMERCIAL.md  architecture.md  backend-overview.md  biometric_envs.md  deployment.md  deployment_guide.md  kiosk-plan.md  local-dev.md  manual_usuario.md  next.md  plan.md  postgres-password-sync.md  roadmap-2025-11.md  roadmap.md  scheduler.md  ui-test-bugs-report.md  ui-test-plan-v2.md  ui-test-plan.md  webauthn-biometric.md  whatsapp-templates.md
docs/changelog/: 2025-12-19-schedules-fixes.md  2025-12-20-special-events-analysis.md  2025-12-22-kiosk-backend-integration.md  2025-12-23-kiosk-fixes-multi-tag.md  2026-01-12-blob-url-authenticated-photos.md  2026-01-13-session-improvements.md  2026-01-14-devices-module.md  2026-01-15-filter-improvements.md  2026-01-16-director-absences-create.md  2026-01-19-preview-dashboard-reports-redesign.md  2026-01-20-preview-alumnos-redesign.md  2026-01-20-preview-apoderados-redesign.md  2026-01-20-preview-ausencias-redesign.md  2026-01-20-preview-cursos-redesign.md  2026-01-20-preview-dispositivos-redesign.md  2026-01-20-preview-excepciones-comunicados-redesign.md  2026-01-20-preview-profesores-redesign.md  2026-01-21-biometric-notifications-modules.md  2026-01-22-parent-portal-redesign.md  CHANGELOG_2025-12-18.md
docs/prompts/: docker.MD  huella_digital.txt  main.md
docs/reporting/: no_ingreso.md
infra/: docker-compose.yml
kiosk-sdk/: README.md
scripts/: appctl  appctl-postdeploy.sh  apply_migrations_to_tenants.py  build_and_push.sh  debug_notification_flow.py  dev_seed.py  fix_users_setup.sql  migrate_to_multi_tenant.py  npm-shim.sh  postgres-entrypoint-wrapper.sh  provision_kiosk.ps1  provision_kiosk.sh  seed_tenant.py  sync_shared.py  whatsapp_setup.py
secrets/dev/: .env.example
secrets/prod/: .env.example
secrets/qa/: .env.example
src/kiosk-app/: README.md  index.html  service-worker.js
src/kiosk-app-preview/: index.html  qr-generator.html  service-worker.js
src/lib/: api-base.js
src/login-app/: index.html
src/school_attendance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/teacher-pwa/: README.md  index.html  manifest.webmanifest  service-worker.js
src/web-app/: README.md  index.html  manifest.webmanifest  package-lock.json  package.json  service-worker.js  tailwind.config.js  vite.config.js
src/web-app-preview/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
tests/: conftest.py  test_api.py  test_api_phase3.py  test_api_security.py  test_attendance.py  test_attendance_concurrency.py  test_attendance_notifications.py  test_auth_service.py  test_bootstrap_regression.py  test_bug_fixes.py  test_bug_fixes_round10.py  test_bug_fixes_round11.py  test_bug_fixes_round12.py  test_bug_fixes_round13.py  test_bug_fixes_round14.py  test_bug_fixes_round15.py  test_bug_fixes_round16.py  test_bug_fixes_round17.py  test_bug_fixes_round18.py  test_bug_fixes_round2.py  test_bug_fixes_round3.py  test_bug_fixes_round4.py  test_bug_fixes_round5.py  test_bug_fixes_round6.py  test_bug_fixes_round7.py  test_bug_fixes_round8.py  test_bug_fixes_round9.py  test_bug_fixes_tdd.py  test_bug_fixes_tdd_round2.py  test_bug_fixes_tdd_round3.py  test_bug_fixes_tdd_round4.py  test_bug_fixes_tdd_round5.py  test_bug_fixes_tdd_round6.py  test_bug_fixes_tdd_round7.py  test_bug_fixes_tdd_round8.py  test_guardians.py  test_multi_tenant.py  test_no_show_alerts.py  test_notifications.py  test_parent_pickups.py  (+19 more)
tests/core/: test_token_blacklist.py
tests/e2e/: package.json  (+2 more)
(+373 files in other folders)
