[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "school-attendance"
version = "0.1.0"
description = "MVP para control de ingreso/salida escolar con FastAPI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "School Attendance Team"}]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "sqlalchemy[asyncio]>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "asyncpg>=0.29",
  "pydantic[email]>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "redis>=5.0",
  "rq>=1.15",
  "httpx>=0.27",
  "boto3>=1.34",
  "jinja2>=3.1",
  "itsdangerous>=2.2",
  "passlib[bcrypt]>=1.7",
  "bcrypt>=4.0,<4.1",  # Pin bcrypt version for passlib compatibility
  "pyjwt[crypto]>=2.8",
  "slowapi>=0.1.9",
  "loguru>=0.7",
  "structlog>=24.1",
  "orjson>=3.9",
  "tenacity>=8.2",
  "python-multipart>=0.0.9",
  "apscheduler>=3.10",
  "aiosqlite>=0.20.0",
  "webauthn>=2.0.0",
  "pywebpush>=1.15.0",
  "Pillow>=10.0",
  "pillow-heif>=0.15"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "httpx>=0.27",
  "trio>=0.25",
  "mypy>=1.8",
  "ruff>=0.3",
  "black>=24.3",
  "types-redis>=4.6",
  "types-requests>=2.31",
  "requests-mock>=1.11",
  "faker>=24.4",
  "bandit>=1.7"
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "ASYNC"]
ignore = ["E203", "S101", "B008", "ASYNC110"]  # ASYNC110: scheduler pattern is intentional

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106", "N801", "B015", "B017", "F401", "N806", "E402", "S110", "S112", "E501", "E741", "B007"]
"app/core/config.py" = ["S105", "S104"]  # Host binding and token type defaults
"app/core/audit.py" = ["S105"]  # Event type strings, not passwords
"app/core/deps.py" = ["S105"]  # token type comparison strings, not passwords
"app/core/tenant_middleware.py" = ["S110"]  # Optional exception handling
"app/db/migrations/*" = ["E402"]
"app/db/session.py" = ["S110"]  # Optional exception handling for connection cleanup
"app/db/models/tenant_audit_log.py" = ["S105"]  # Event type strings
"app/api/v1/super_admin/auth.py" = ["S105"]  # token_type field
"app/api/v1/super_admin/tenants.py" = ["S105", "S608", "S110"]  # token_type, validated schema, optional pass
"app/api/v1/webapp_routes.py" = ["S110"]  # Optional exception handling
"app/schemas/*.py" = ["S105"]  # token_type fields
"app/services/tenant_admin_service.py" = ["S105", "S110"]  # token_type field, optional pass
"app/services/feature_flag_service.py" = ["S110"]  # Optional exception handling
"app/services/attendance_notification_service.py" = ["S110", "E501"]  # Cleanup, debug logging
"app/services/attendance_service.py" = ["E501"]  # Debug logging
"app/services/dashboard_service.py" = ["B007"]  # Unused loop variable intentional
"app/services/guardian_service.py" = ["S106"]  # Placeholder password, not hardcoded
"app/services/no_show_service.py" = ["S112"]  # Continue in exception is intentional
"app/services/notifications/*.py" = ["S110"]  # Cleanup exception handling
"app/services/photo_service.py" = ["S110"]  # Cleanup exception handling
"app/services/webauthn_service.py" = ["E501"]  # Comment line explaining dict structure
"app/workers/jobs/*.py" = ["S110", "S112", "E501"]  # Exception handling, HTML templates

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true
disallow_any_generics = true

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
# Use auto mode for pytest-asyncio to handle async fixtures
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
skip_empty = true
show_missing = true
